--- a/xiushang-boot-example/example-admin/src/main/resources/templates/grant.html
+++ b/xiushang-boot-example/example-admin/src/main/resources/templates/grant.html
@@ -1,27 +1,47 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8">
-    <title>授权</title>
+    <meta charset="UTF-8"/>
+    <title>确认授权页面</title>
+    <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no"/>
+    <link rel="stylesheet" href="//i.gtimg.cn/vipstyle/frozenui/2.0.0/css/frozen.css"/>
+
+    <style>
+        .block{
+            position: relative;
+        }
+        .ui-notice{
+            position: relative;
+            padding:20px 15px;
+            box-sizing: border-box;
+        }
+        .ui-notice p{
+            color:#333;
+            font-weight: 600;
+        }
+        .ui-btn-primary{
+            background-color: #02cd93;
+            border-color:#02cd93;;
+        }
+        .ui-notice-btn{
+            padding:50px 0px 15px;
+        }
+    </style>
 </head>
-<!-- 省略样式 -->
-<body style="margin: 0px">
-<div class="title">
-    <div class="title-right">秀上数据运营平台 授权</div>
-    <div class="title-left">
-        <a href="#help">help</a>
-    </div>
-</div>
-<div class="container">
-    <h3 th:text="'应用 '+${clientName}+' 请求授权，该应用将获取你的以下信息'"></h3>
-    <p>昵称，账号</p>
-    授权后表明你已同意
-    <form method="post" action="/oauth/authorize">
-        <input type="hidden" name="user_oauth_approval" value="true">
-        <input type="hidden" name="scope.all" value="true">
-        <input type="hidden" name="_csrf" th:value="${_csrf.getToken()}"/>
-        <button class="btn" type="submit"> 同意/授权</button>
-    </form>
+<body>
+<div class="block">
+    <section class="ui-notice">
+        <i class="icon icon-notice"></i>
+        <p>是否授权：<span th:text="${clientName}">clientId</span></p>
+        <div class="ui-notice-btn">
+            <form id='confirmationForm' name='confirmationForm' action="/oauth/authorize" method='post'>
+                <input name='user_oauth_approval' value='true' type='hidden'/>
+                <!--写好授权访问领域-->
+                <input th:name="${s}" value="true" type="hidden" th:each="s : ${scopeList}"/>
+                <input class="ui-btn-primary ui-btn-lg ui-btn-primary" name='authorize' value='授权' type='submit'/>
+            </form>
+        </div>
+    </section>
 </div>
 </body>
 </html>
