--- a/xiushang-boot-example/example-admin/src/main/resources/templates/login.html
+++ b/xiushang-boot-example/example-admin/src/main/resources/templates/login.html
@@ -8,8 +8,8 @@
 <form class="login-page" action="/authentication/form" method="post">
     <div class="form">
         <h3>账户登录</h3>
-        <input type="text" placeholder="用户名" name="username" required="required"/>
-        <input type="password" placeholder="密码" name="password" required="required"/>
+        <input type="text" placeholder="用户名" name="username" value="19888122579" required="required"/>
+        <input type="password" placeholder="密码" name="password" value="123456Abc" required="required"/>
         <button type="submit">登录</button>
     </div>
 </form>
