--- a/xiushang-boot-example/example-admin/src/main/resources/templates/login.html
+++ b/xiushang-boot-example/example-admin/src/main/resources/templates/login.html
@@ -5,7 +5,7 @@
     <title>登录</title>
 </head>
 <body>
-<form class="login-page" action="/authentication/form" method="post">
+<form class="login-page" action="/authentication/login" method="post">
     <div class="form">
         <h3>账户登录</h3>
         <input type="text" placeholder="用户名" name="username" value="19888122579" required="required"/>
