加载效果修改

--- a/xiushang-boot-example/example-web/src/pages/document.ejs
+++ b/xiushang-boot-example/example-web/src/pages/document.ejs
@@ -6,12 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta
       name="keywords"
-      content="antd,umi,umijs,ant design,Scaffolding, layout, Ant Design, project, Pro, admin, console, homepage, out-of-the-box, middle and back office, solution, component library"
+      content="秀上,数据运营，广告"
     />
     <meta
       name="description"
-      content="
-    An out-of-box UI solution for enterprise applications as a React boilerplate."
+      content="服务、管理、运营一站式数据运营平台"
     />
     <meta
       name="description"
@@ -22,7 +21,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"
     />
-    <title>Ant Design Pro</title>
+    <title>秀上-智能数据运营平台</title>
     <link rel="icon" href="<%= context.config.publicPath +'favicon.ico'%>" type="image/x-icon" />
   </head>
   <body>
@@ -202,6 +201,70 @@
             transform: rotate(405deg);
           }
         }
+
+
+        ul {
+            width: 100%;
+            margin: auto;
+            margin-top: 60px;
+            list-style: none;
+            padding: 0;
+        }
+        ul li {
+            width: 180px;
+            height: 180px;
+            line-height: 176px;
+            text-align: center;
+            margin: 0 auto;
+            background-repeat: no-repeat;
+            background-position: center;
+        }
+        ul li img {
+            vertical-align: middle;
+        }
+        li:nth-child(1) {
+            background-color: #1ABC9C;
+        }
+        li:nth-child(2) {
+            background-color: #34495E;
+        }
+        li:nth-child(3) {
+            background-color: #F39C12;
+        }
+        li:nth-child(4) {
+            background-color: #9B59B6;
+        }
+        li:nth-child(5) {
+            background-color: #3498DB;
+        }
+        li:nth-child(6) {
+            background-color: #E74C3C;
+        }
+        li:nth-child(7) {
+            background-color: #2ECC71;
+        }
+        li:nth-child(8) {
+            background-color: #2C3E50;
+        }
+        li:nth-child(9) {
+            background-color: #F1C40F;
+        }
+        li:nth-child(10) {
+            background-color: #8E44AD;
+        }
+        li:nth-child(11) {
+            background-color: #2980B9;
+        }
+        li:nth-child(12) {
+            background-color: #E74C3C;
+        }
+        .attr {
+            color: #fff;
+            text-align: center;
+            font-size: 0.875rem;
+            margin-top: 20px;
+        }
+
       </style>
       <div
         style="
@@ -213,22 +276,23 @@
           min-height: 420px;
         "
       >
-        <img src="<%= context.config.publicPath +'pro_icon.svg'%>" alt="logo" width="256" />
+
         <div class="page-loading-warp">
-          <div class="ant-spin ant-spin-lg ant-spin-spinning">
-            <span class="ant-spin-dot ant-spin-dot-spin"
-              ><i class="ant-spin-dot-item"></i><i class="ant-spin-dot-item"></i
-              ><i class="ant-spin-dot-item"></i><i class="ant-spin-dot-item"></i
-            ></span>
-          </div>
+            <ul>
+                <li>
+                    <img src="https://www.xiushangsh.com/null/common/svg-loaders/ball-triangle.svg" width="50" alt="秀上-智能数据运营平台">
+                </li>
+                <div style="clear: both"></div>
+            </ul>
+            <div style="clear: both"></div>
         </div>
         <div style="display: flex; align-items: center; justify-content: center">
           <img
-            src="https://gw.alipayobjects.com/zos/rmsportal/KDpgvguMpGfqaHPjicRK.svg"
+            src="https://www.xiushangsh.com/null/common/logo/logo.svg"
             width="32"
             style="margin-right: 8px"
           />
-          Ant Design
+          秀上-智能数据运营平台
         </div>
       </div>
     </div>
