加载效果修改

--- a/xiushang-boot-example/example-web/src/pages/document.ejs
+++ b/xiushang-boot-example/example-web/src/pages/document.ejs
@@ -21,7 +21,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"
     />
-    <title>秀上-智能数据运营平台</title>
+    <title>秀上-智慧数据运营平台</title>
     <link rel="icon" href="<%= context.config.publicPath +'favicon.ico'%>" type="image/x-icon" />
   </head>
   <body>
@@ -280,7 +280,7 @@
         <div class="page-loading-warp">
             <ul>
                 <li>
-                    <img src="https://www.xiushangsh.com/null/common/svg-loaders/ball-triangle.svg" width="50" alt="秀上-智能数据运营平台">
+                    <img src="https://www.xiushangsh.com/null/common/svg-loaders/ball-triangle.svg" width="50" alt="秀上-智慧数据运营平台">
                 </li>
                 <div style="clear: both"></div>
             </ul>
@@ -292,7 +292,7 @@
             width="32"
             style="margin-right: 8px"
           />
-          秀上-智能数据运营平台
+          秀上-智慧数据运营平台
         </div>
       </div>
     </div>
