--- a/xiushang-boot-example/example-web/src/pages/document.ejs
+++ b/xiushang-boot-example/example-web/src/pages/document.ejs
@@ -10,7 +10,7 @@
     />
     <meta
       name="description"
-      content="服务、管理、运营一站式数据运营平台"
+      content="一站式智慧数据运营平台"
     />
     <meta
       name="description"
